launchpad-buildd (146) UNRELEASED; urgency=medium

  * buildsnap: Initialise git submodules (LP: #1694413).
  * Run snapcraft as non-root with passwordless sudo, since we run into
    buggy corner cases in some plugins when running as root (LP: #1702656).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 31 May 2017 11:19:36 +0100

launchpad-buildd (145) xenial; urgency=medium

  * buildrecipe: Explicitly mark the local apt archive as trusted
    (LP: #1701826).

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 03 Jul 2017 15:03:51 +0100

launchpad-buildd (144) xenial; urgency=medium

  * buildsnap: Fix revision_id computation to handle the case where
    --git-path is not passed.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 15 May 2017 21:45:16 +0100

launchpad-buildd (143) xenial; urgency=medium

  * Record the branch revision used to build a snap and return it along with
    other XML-RPC status information (LP: #1679157).
  * Write out trusted keys sent by buildd-manager (LP: #1626739).
  * Add tests for lpbuildd.pottery, extracted from Launchpad.
  * Configure a git:// proxy for snap builds (LP: #1663920).
  * buildsnap: If --git-repository is passed but --git-path is not, build
    the default branch of the repository (LP: #1688224).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 12 May 2017 16:47:57 +0100

launchpad-buildd (142) trusty; urgency=medium

  * lpbuildd.binarypackage: Pass DEB_BUILD_OPTIONS=noautodbgsym if we have
    not been told to build debug symbols (LP: #1623256).
  * debian/upgrade-config, lpbuildd.slave: Drop compatibility with ancient
    pre-lucid versions of python-apt.
  * lpbuildd.pottery.intltool: Remove unused and Python-3-unfriendly
    string/file conditional from ConfigFile.__init__.
  * Use Python-3-compatible forms of "print" and "except".
  * buildsnap: Set SNAPCRAFT_SETUP_CORE=1 during pull phase so that
    snapcraft will fetch and unpack the core snap for classic confinement
    when necessary (LP: #1650946).
