@@ -16,7 +16,6 @@ include sbuildrc
 include scan-for-processes
 include slave-prep
 include snap-git-proxy
-include sudo-wrapper
 include template-buildd-slave.conf
 include test_buildd_generatetranslationtemplates
 include test_buildd_recipe
