@@ -1,4 +1,0 @@
-#! /bin/sh
-set -e
-
-exec sudo -E "$@"
